<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/grass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="resetScore"
        android:text="@string/reset" />

    <Button
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:onClick="addToA"
        android:text="@string/score" />

    <Button
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:onClick="addToB"
        android:text="@string/score2" />

    <Button
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:onClick="foulA"
        android:text="@string/foul" />

    <Button
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:onClick="foulB"
        android:text="@string/foul2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:text="@string/team_a"
                android:textColor="#E0E0E0"
                android:textSize="25sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/fault_team_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/_a0"
                android:textColor="#FFEE58"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:text="@string/_b0"
                android:textSize="60sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="35dp"
                android:text="@string/_c0"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/fault_team_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:text="@string/_d0"
                android:textColor="#FFEE58"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp"
                android:text="@string/team_b"
                android:textColor="#E0E0E0"
                android:textSize="25sp"
                android:textStyle="normal" />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>